--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>覺得厲害</h1>
-    <img.src="./>
+    <img.src="./received_1038003689729324.jpeg"></img>
   </body>
 </html>
